Enhance website: Clean up comments, add navigation highlighting, and improve code quality

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="#" aria-label="Gitelle Art Studio Home">
-                    <!-- Using logo-black.png from resources -->
+                <a href="#top" aria-label="Gitelle Art Studio Home">
                     <img class="wing-logo" src="resources/logo-black.png" alt="Gitelle Logo" width="50" height="40">
                     <span>Gitelle</span>
                 </a>
@@ -33,11 +32,12 @@
                     <span class="bar"></span>
                 </button>
                 <ul class="nav-links">
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#">Workshops</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Artists</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#hero" class="active">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#workshops">Workshops</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#testimonials">Artists</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -45,7 +45,7 @@
 
     <main>
         <!-- Hero Section -->
-        <section class="hero">
+        <section class="hero" id="hero">
             <div class="hero-content">
                 <div class="text-overlay">
                     <h1>Where Art Takes Flight</h1>
@@ -238,7 +238,6 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <!-- Using logo-white.png from resources -->
                     <img class="wing-logo" src="resources/logo-white.png" alt="Gitelle Logo" width="30" height="24">
                     <span>Gitelle Art Studio</span>
                 </div>
