Replace external Unsplash images with local image files

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <p>Join us in our light-filled studio space where every brushstroke and sculpted form tells a story, and where your artistic journey can truly take flight.</p>
                     </div>
                     <div class="about-image">
-                        <img src="https://images.unsplash.com/photo-1605721911519-3dfeb3be25e7?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Gitelle Art Studio space with natural lighting and minimalist design">
+                        <img src="resources/about-image.avif" alt="Gitelle Art Studio space with natural lighting and minimalist design">
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                 <div class="workshop-cards">
                     <div class="workshop-card">
                         <div class="workshop-image">
-                            <img src="https://images.unsplash.com/photo-1565373987291-4d7424dd9e59?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Person sculpting clay into an artistic form">
+                            <img src="resources/sculptural-forms.avif" alt="Person sculpting clay into an artistic form">
                         </div>
                         <div class="workshop-details">
                             <h3>Sculptural Forms</h3>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="workshop-card">
                         <div class="workshop-image">
-                            <img src="https://images.unsplash.com/photo-1506073828772-2f85239b6d2d?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&fm=jpg&q=60&w=3000" alt="Dramatic black and white photography with strong shadows">
+                            <img src="resources/Light&Shadow.jpg" alt="Dramatic black and white photography with strong shadows">
                         </div>
                         <div class="workshop-details">
                             <h3>Light & Shadow</h3>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="workshop-card">
                         <div class="workshop-image">
-                            <img src="https://images.unsplash.com/photo-1578301978018-3005759f48f7?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Abstract painting with bold brushstrokes">
+                            <img src="resources/abstract-Eexpressions.avif" alt="Abstract painting with bold brushstrokes">
                         </div>
                         <div class="workshop-details">
                             <h3>Abstract Expressions</h3>
@@ -119,37 +119,37 @@
                 <h2>Gallery Preview</h2>
                 <div class="gallery-grid">
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1579783902614-a3fb3927b6a5?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Abstract black and white painting">
+                        <img src="resources/maria-chen.avif" alt="Abstract black and white painting">
                         <div class="gallery-overlay">
                             <span class="artist-name">Maria Chen</span>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1697599212090-7ce181ff0155?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&fm=jpg&q=60&w=3000" alt="Marble sculpture of human form">
+                        <img src="resources/james-wilkins.jpg" alt="Marble sculpture of human form">
                         <div class="gallery-overlay">
                             <span class="artist-name">James Wilkins</span>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1561214115-f2f134cc4912?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Black and white landscape photography">
+                        <img src="resources/sofia-patel.avif" alt="Black and white landscape photography">
                         <div class="gallery-overlay">
                             <span class="artist-name">Sofia Patel</span>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1570475735025-6cd1cd5c779d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Ceramic pottery with minimalist design">
+                        <img src="resources/david-nguyen.avif" alt="Ceramic pottery with minimalist design">
                         <div class="gallery-overlay">
                             <span class="artist-name">David Nguyen</span>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1605721911519-3dfeb3be25e7?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Mixed media artwork with textured elements">
+                        <img src="resources/about-image.avif" alt="Mixed media artwork with textured elements">
                         <div class="gallery-overlay">
                             <span class="artist-name">Elena Rodriguez</span>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1554188248-986adbb73be4?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Wire sculpture installation">
+                        <img src="resources/marcus-johnson.avif" alt="Wire sculpture installation">
                         <div class="gallery-overlay">
                             <span class="artist-name">Marcus Johnson</span>
                         </div>
